--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="./recipes/french-onion-soup.html">French Onion Soup Recipe</a>
+        <a href="./recipes/french-onion-soup.html">French Onion Recipe</a>
       </li>
       <li>
-        <a href="./recipes/hamburger-soup.html">Hamburger Soup Recipe</a>
+        <a href="./recipes/hamburger-soup.html">Hamburger Recipe</a>
       </li>
       <li>
-        <a href="./recipes/potato-soup.html">Potato Soup Recipe</a>
+        <a href="./recipes/potato-soup.html">Potato Recipe</a>
       </li>
     </ul>
   </body>
